--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="css/styles.css" >
     </head>
     <body class="body">
+        <h1>Pokedex</h1>
         <ul class="pokemon-list">
 
         </ul>
+        <script src="js/promise-polyfill.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
