--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         </ul>
         <script src="js/promise-polyfill.js"></script>
+        <script src="js/fetch-polyfill.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
