--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <body class="body">
         <h1>Pokedex</h1>
         <ul class="pokemon-list">
-
+            <div id="modal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2 id="modal-name"></h2>
+                    <p id="modal-height"></p>
+                    <img id="modal-image" src="" alt="Pokemon Image">
+                </div>
+            </div>
         </ul>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch-polyfill.js"></script>
