--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class="pokemon-list">
             <div id="modal" class="modal">
                 <div class="modal-content">
-                    <span class="close">&times;</span>
+                    <span class="close"></span>
                     <h2 id="modal-name"></h2>
                     <p id="modal-height"></p>
                     <img id="modal-image" src="" alt="Pokemon Image">
