add <p id="modal-types"> index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <span class="close">&times;</span>
                     <h2 id="modal-name"></h2>
                     <p id="modal-height"></p>
-                    
+                    <p id="modal-types"></p>
                     <img id="modal-image" src="" alt="Pokemon Image">
                 </div>
             </div>
