--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="css/styles.css" >
     </head>
     <body class="body">
-        <h1>Pokedex</h1>
+        <nav class="navbar">
+            <h1>Pokédex</h1>
+            <img class="pokeball" src="">
+        </nav>
         <ul class="pokemon-list">
             <div id="modal" class="modal">
                 <div class="modal-content">
