--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="css/styles.css" >
     </head>
     <body class="body">
-        <nav class="navbar">
+        <nav class="navbar" role="navigation">
             <h1>Pokédex</h1>
             
         </nav>
 
-        <button class="pokemon-list btn" type="button" ></button>
+        <button class="pokemon-list btn" type="button" aria-label="View Details"></button>
             
         <div class="modal fade" id="pokemonModal" tabindex="-1" aria-labelledby="pokemonModalLabel" aria-hidden="true">
             <div class="modal-dialog">
