--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             
         </nav>
 
+        <div class="input-group mb-3">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for a Pokemon">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
+            </div>
+          </div>
+
         <button class="pokemon-list btn" type="button" aria-label="View Details"></button>
             
         <div class="modal fade" id="pokemonModal" tabindex="-1" aria-labelledby="pokemonModalLabel" aria-hidden="true">
