use all lowercase letters

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     </head>
     <body class="body">
         <nav class="navbar" role="navigation">
-            <h1>Pokédex</h1>
+            <h1>pokédex</h1>
             
         </nav>
 
+        <br>
+
         <div class="input-group mb-3">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for a Pokemon">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for a Pokémon">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
+              <button class="btn btn-outline-secondary" type="button" id="searchButton">gotta catch 'em all!</button>
             </div>
           </div>
 
